--- a/generator.html
+++ b/generator.html
@@ -118,33 +118,33 @@
         <div class="image-button" data-category="mealType" data-filter="lunchmiddag">
             <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="Lunchmiddag" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="italien">
-            <img src="images/knappargenerator/knappar/pasta.png" alt="Thailand" />
+        <div class="image-button" data-category="mealType" data-filter="pasta">
+            <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Sverige" />
+        <div class="image-button" data-category="mealType" data-filter="forattertilltugg">
+            <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
         </div>
-        <div class="image-button" data-category="mealType" data-filter="italien">
-            <img src="images/knappargenerator/knappar/streetfood.png" alt="Italien" />
+        <div class="image-button" data-category="mealType" data-filter="streetfood">
+            <img src="images/knappargenerator/knappar/streetfood.png" alt="Streetfood" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="mealType" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frankrike" />
+        <div class="image-button hidden" data-category="mealType" data-filter="frukostbrunch">
+            <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frukost Brunch" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Spanien" />
+        <div class="image-button hidden" data-category="mealType" data-filter="barnvanligt">
+            <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Barnvänligt" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/soppa.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="mealType" data-filter="soppa">
+            <img src="images/knappargenerator/knappar/soppa.png" alt="Soppa" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/sallad.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="mealType" data-filter="sallad">
+            <img src="images/knappargenerator/knappar/sallad.png" alt="Sallad" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="mealType" data-filter="sasdipproror">
+            <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
         </div>
-        <div class="image-button hidden" data-category="mealType" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/efterattfika.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="mealType" data-filter="efterattfika">
+            <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
@@ -159,33 +159,33 @@
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="proteins">
-        <div class="image-button" data-category="protein" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/not.png" alt="Sverige" />
+        <div class="image-button" data-category="protein" data-filter="not">
+            <img src="images/knappargenerator/knappar/not.png" alt="Nöt" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="italien">
-            <img src="images/knappargenerator/knappar/fisk.png" alt="Thailand" />
+        <div class="image-button" data-category="protein" data-filter="fisk">
+            <img src="images/knappargenerator/knappar/fisk.png" alt="Fisk" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/fagel.png" alt="Sverige" />
+        <div class="image-button" data-category="protein" data-filter="fagel">
+            <img src="images/knappargenerator/knappar/fagel.png" alt="Fågel" />
         </div>
-        <div class="image-button" data-category="protein" data-filter="italien">
-            <img src="images/knappargenerator/knappar/flask.png" alt="Italien" />
+        <div class="image-button" data-category="protein" data-filter="flask">
+            <img src="images/knappargenerator/knappar/flask.png" alt="Fläsk" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
-        <div class="image-button hidden" data-category="protein" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Frankrike" />
+        <div class="image-button hidden" data-category="protein" data-filter="vegetarisk">
+            <img src="images/knappargenerator/knappar/vegetarisk.png" alt="Vegetarisk" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/vegansk.png" alt="Spanien" />
+        <div class="image-button hidden" data-category="protein" data-filter="vegansk">
+            <img src="images/knappargenerator/knappar/vegansk.png" alt="Vegansk" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/skaldjur.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="protein" data-filter="skaldjur">
+            <img src="images/knappargenerator/knappar/skaldjur.png" alt="Skaldjur" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/vilt.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="protein" data-filter="vilt">
+            <img src="images/knappargenerator/knappar/vilt.png" alt="Vilt" />
         </div>
-        <div class="image-button hidden" data-category="protein" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/lamm.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="protein" data-filter="lamm">
+            <img src="images/knappargenerator/knappar/lamm.png" alt="Lamm" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
