--- a/generator.html
+++ b/generator.html
@@ -202,57 +202,57 @@
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
     <div class="filter-container" id="countries">
-        <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/italien.png" alt="Sverige" />
-        </div>
         <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/sverige.png" alt="Thailand" />
+            <img src="images/knappargenerator/knappar/italien.png" alt="Italien" />
         </div>
         <div class="image-button" data-category="country" data-filter="sverige">
-            <img src="images/knappargenerator/knappar/japan.png" alt="Sverige" />
+            <img src="images/knappargenerator/knappar/sverige.png" alt="Sverige" />
         </div>
-        <div class="image-button" data-category="country" data-filter="italien">
-            <img src="images/knappargenerator/knappar/indien.png" alt="Italien" />
+        <div class="image-button" data-category="country" data-filter="japan">
+            <img src="images/knappargenerator/knappar/japan.png" alt="Japan" />
+        </div>
+        <div class="image-button" data-category="country" data-filter="indien">
+            <img src="images/knappargenerator/knappar/indien.png" alt="Indien" />
         </div>
         <!-- Dolda knappar som visas när "Visa fler" klickas -->
+        <div class="image-button hidden" data-category="country" data-filter="kina">
+            <img src="images/knappargenerator/knappar/kina.png" alt="Kina" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="thailand">
+            <img src="images/knappargenerator/knappar/thailand.png" alt="Thailand" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="korea">
+            <img src="images/knappargenerator/knappar/korea.png" alt="Korea" />
+        </div>
+        <div class="image-button hidden" data-category="country" data-filter="mexiko">
+            <img src="images/knappargenerator/knappar/mexiko.png" alt="Mexiko" />
+        </div>
         <div class="image-button hidden" data-category="country" data-filter="frankrike">
-            <img src="images/knappargenerator/knappar/kina.png" alt="Frankrike" />
+            <img src="images/knappargenerator/knappar/frankrike.png" alt="Frankrike" />
         </div>
         <div class="image-button hidden" data-category="country" data-filter="spanien">
-            <img src="images/knappargenerator/knappar/thailand.png" alt="Spanien" />
+            <img src="images/knappargenerator/knappar/spanien" alt="Spanien" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/korea.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="grekland">
+            <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/mexiko.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="asien">
+            <img src="images/knappargenerator/knappar/asien.png" alt="Asien" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/frankrike.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="europa">
+            <img src="images/knappargenerator/knappar/europa.png" alt="Europa" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/spanien" alt="spanien" />
+        <div class="image-button hidden" data-category="country" data-filter="nordamerika">
+            <img src="images/knappargenerator/knappar/nordamerika.png" alt="Nordamerika" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/grekland.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="sydamerika">
+            <img src="images/knappargenerator/knappar/sydamerika.png" alt="Sydamerika" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/asien.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="mellanostern">
+            <img src="images/knappargenerator/knappar/mellanostern.png" alt="Mellanöstern" />
         </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/europa.png" alt="Tyskland" />
-        </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/nordamerika.png" alt="Tyskland" />
-        </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/sydamerika.png" alt="Tyskland" />
-        </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/mellanostern.png" alt="Tyskland" />
-        </div>
-        <div class="image-button hidden" data-category="country" data-filter="tyskland">
-            <img src="images/knappargenerator/knappar/afrika.png" alt="Tyskland" />
+        <div class="image-button hidden" data-category="country" data-filter="afrika">
+            <img src="images/knappargenerator/knappar/afrika.png" alt="Afrika" />
         </div>
         <!-- Lägg till fler dolda knappar efter behov -->
 
