--- a/generator.html
+++ b/generator.html
@@ -269,6 +269,10 @@
     <!-- Sök Knapp -->
     <button id="searchBtn">Sök</button>
 
+    <!-- Plats för att visa matchande Instagram-inlägg -->
+    <div id="instagram-results-container"></div>
+
+
     <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
 
 
