--- a/generator.html
+++ b/generator.html
@@ -270,7 +270,7 @@
 
 
     <!-- Sök Knapp -->
-    <button id="searchBtn">Sök</button>
+    <button id="searchBtn" class="big-button">Sök</button>
 
     <!-- Plats för att visa matchande Instagram-inlägg -->
     <div id="instagram-results-container"></div>
