--- a/generator.html
+++ b/generator.html
@@ -105,7 +105,7 @@
     </nav>
 
     <a href="startsida1.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
     <div id="results-container"></div>
