--- a/generator.html
+++ b/generator.html
@@ -113,7 +113,7 @@
     <div class="background-container"></div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/tillfalle.png" alt="Typ av Mat" class="category-image" />
+        <img src="images/rubrik bilder/mattyp.png" alt="Typ av Mat" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
@@ -157,7 +157,7 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/proteintyp.png" alt="Protein" class="category-image" />
+        <img src="images/rubrik bilder/protein.png" alt="Protein" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
@@ -200,7 +200,7 @@
 
 
     <div class="category-header">
-        <img src="images/rubrik bilder/matfran.png" alt="Mat Från" class="category-image" />
+        <img src="images/rubrik bilder/matfran2.png" alt="Mat Från" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
