--- a/generator.html
+++ b/generator.html
@@ -113,7 +113,7 @@
     <div class="background-container"></div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/mattyp.svg" alt="Typ av Mat" class="category-image" />
+        <img src="images/rubrik bilder/mattyp4.svg" alt="Typ av Mat" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
@@ -157,7 +157,7 @@
     </div>
 
     <div class="category-header">
-        <img src="images/rubrik bilder/protein.svg" alt="Protein" class="category-image" />
+        <img src="images/rubrik bilder/protein4.svg" alt="Protein" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
@@ -200,7 +200,7 @@
 
 
     <div class="category-header">
-        <img src="images/rubrik bilder/matfran3.svg" alt="Mat Från" class="category-image" />
+        <img src="images/rubrik bilder/matfran4.svg" alt="Mat Från" class="category-image" />
     </div>
     <!-- Sökfilter Knappar -->
     <!-- Filter Knappar -->
