--- a/generator.html
+++ b/generator.html
@@ -156,6 +156,11 @@
 
     </div>
 
+    <!-- Divider efter första kategorin och före den andra kategorin -->
+<div class="divider-container">
+    <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+</div>
+
     <div class="category-header">
         <img src="images/rubrik bilder/protein6.svg" alt="Protein" class="category-image" />
     </div>
@@ -197,7 +202,9 @@
 
     </div>
 
-
+    <div class="divider-container">
+        <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+    </div>
 
     <div class="category-header">
         <img src="images/rubrik bilder/matfran6.svg" alt="Mat Från" class="category-image" />
@@ -264,7 +271,9 @@
 
     </div>
 
-
+    <div class="divider-container">
+        <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+    </div>
 
 
 
