--- a/generator.html
+++ b/generator.html
@@ -158,7 +158,7 @@
 
     <!-- Divider efter första kategorin och före den andra kategorin -->
 <div class="divider-container">
-    <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+    <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
 </div>
 
     <div class="category-header">
@@ -203,7 +203,7 @@
     </div>
 
     <div class="divider-container">
-        <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
     </div>
 
     <div class="category-header">
@@ -272,7 +272,7 @@
     </div>
 
     <div class="divider-container">
-        <img src="images/divider/dividerstreck.svg" alt="Divider" class="divider-image" />
+        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
     </div>
 
 
