--- a/generator.html
+++ b/generator.html
@@ -112,6 +112,16 @@
 
     <div class="background-container"></div>
 
+    <div class="welcome-text">
+        <h1>Välkommen till Instarecept!</h1>
+        <p>Här gör vi det enklare än någonsin att navigera genom receptdjungeln på nätet. Vi vet att de bästa recepten ofta gömmer sig på Instagram och därför har vi skapat en plattform som gör din receptsökning tusen gånger enklare...</p>
+        <h2>Upptäck våra huvudfunktioner:</h2>
+        <p><strong>Generatorn:</strong> Välj bland olika kategorier och låt dig inspireras av ett noggrant urval från Sveriges ledande matkreatörer.</p>
+        <p><strong>Receptsök/Ingredienssök:</strong> Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
+        <p>Observera att allt innehåll, inklusive bilder och recept, ägs av de ursprungliga skaparna! Vi står inte som ägare till detta innehåll – vår ambition är att föra dig närmare deras kreativitet. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration.</p>
+    </div>
+
+
     <div class="category-header">
         <img src="images/rubrik bilder/mattyp7.svg" alt="Typ av Mat" class="category-image" />
     </div>
@@ -157,9 +167,9 @@
     </div>
 
     <!-- Divider efter första kategorin och före den andra kategorin -->
-<div class="divider-container">
-    <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
-</div>
+    <div class="divider-container">
+        <img src="images/divider/divider3.svg" alt="Divider" class="divider-image" />
+    </div>
 
     <div class="category-header">
         <img src="images/rubrik bilder/protein7.svg" alt="Protein" class="category-image" />
