--- a/generator.html
+++ b/generator.html
@@ -114,11 +114,17 @@
 
     <div class="welcome-text">
         <h1>Välkommen till Instarecept!</h1>
+        <p>Vi förenklar sökandet efter Instagrams bästa recept.</p>
+        Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta smaskiga måltider baserade på dina ingredienser.</p>
+        <p> Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
+        <p>Observera: Allt innehåll tillhör originalskaparna.Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. [Läs mer...](#)</p> 
+       
+        <!-- <h1>Välkommen till Instarecept!</h1>
         <p>Här gör vi det enklare än någonsin att navigera genom receptdjungeln på nätet. Vi vet att de bästa recepten ofta gömmer sig på Instagram och därför har vi skapat en plattform som gör din receptsökning tusen gånger enklare...</p>
         <h2>Upptäck våra huvudfunktioner:</h2>
         <p><strong>Generatorn:</strong> Välj bland olika kategorier och låt dig inspireras av ett noggrant urval från Sveriges ledande matkreatörer.</p>
         <p><strong>Receptsök/Ingredienssök:</strong> Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
-        <p>Observera att allt innehåll, inklusive bilder och recept, ägs av de ursprungliga skaparna! Vi står inte som ägare till detta innehåll – vår ambition är att föra dig närmare deras kreativitet. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration.</p>
+        <p>Observera att allt innehåll, inklusive bilder och recept, ägs av de ursprungliga skaparna! Vi står inte som ägare till detta innehåll – vår ambition är att föra dig närmare deras kreativitet. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration.</p> -->
     </div>
 
 
