--- a/generator.html
+++ b/generator.html
@@ -113,12 +113,15 @@
     <div class="background-container"></div>
 
     <div class="welcome-text">
+
         <h1>Välkommen till Instarecept!</h1>
         <p>Vi förenklar sökandet efter Instagrams bästa recept.</p>
-        Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta smaskiga måltider baserade på dina ingredienser.</p>
-        <p> Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
-        <p>Observera: Allt innehåll tillhör originalskaparna.Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. [Läs mer...](#)</p> 
-       
+        <p>Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta smaskiga måltider baserade på dina ingredienser.</p>
+        <p>Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
+        <p>Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#">Läs mer...</a></p>
+
+
+
         <!-- <h1>Välkommen till Instarecept!</h1>
         <p>Här gör vi det enklare än någonsin att navigera genom receptdjungeln på nätet. Vi vet att de bästa recepten ofta gömmer sig på Instagram och därför har vi skapat en plattform som gör din receptsökning tusen gånger enklare...</p>
         <h2>Upptäck våra huvudfunktioner:</h2>
