--- a/index.html
+++ b/index.html
@@ -138,19 +138,20 @@
         <!-- Slider-knappar ovanför sökfältet -->
         <div class="slider-button-container">
             <div class="veg-container">
-                <div class="veg-label">Bara Veg</div>
+                <div class="veg-label">Veg</div>
                 <label class="switch">
                     <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
                     <span class="slider round"></span>
                 </label>
-            </div>
+            </div> 
+            <!--
             <div class="lang-container">
-                <div class="lang-label">Bara recept på svenska</div>
+                <div class="lang-label">På svenska</div>
                 <label class="switch">
                     <input type="checkbox" id="langSwitch" onchange="toggleLangFilter()">
                     <span class="slider round"></span>
                 </label>
-            </div>
+            </div> -->
         </div>
 
         <!-- Sökfält och knappar -->
