--- a/generator.html
+++ b/generator.html
@@ -117,7 +117,7 @@
         <div style="text-align: left; padding: 20px;">
             <h1 style="margin-bottom: 0.5em;">Välkommen till Instarecept!</h1>
             <p style="margin-top: 0; margin-bottom: 1em;">Vi förenklar sökandet efter Instagrams bästa recept.</p>
-            <p style="margin-top: 0; margin-bottom: 1em;">Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta smaskiga måltider baserade på dina ingredienser.</p>
+            <p style="margin-top: 0; margin-bottom: 1em;">Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta smarriga måltider baserade på dina ingredienser.</p>
             <p style="margin-top: 0; margin-bottom: 1em;">Ange dina ingredienser och låt oss visa vägen till nya smaskiga måltider som väntar på att bli tillagade.</p>
             <p style="margin-top: 0;">Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
 
@@ -312,7 +312,7 @@
 
 
         <!-- Plats för att visa matchande Instagram-inlägg -->
-        <div id="instagram-results-container"></div>
+        <!-- <div id="instagram-results-container"></div> -->
 
 
         <div id="pagination-controls"></div> <!-- Pagineringskontroller här -->
