--- a/generator.html
+++ b/generator.html
@@ -104,7 +104,7 @@
         </ul>
     </nav>
 
-    <a href="startsida1.html" class="logo-link">
+    <a href="generator.html" class="logo-link">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
