--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </ul>
     </nav>
 
-    <a href="startsida1.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga" />
+    <a href="generator.html" class="logo-link">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga" />
     </a>
 
     <div class="background-container"></div>
