--- a/index.html
+++ b/index.html
@@ -57,10 +57,26 @@
             <li class="nav__item">
                 <a href="index.html" class="nav__link">
                     <span class="nav__text">
-                        Ingredienser
+                        Ingredienssök
                     </span>
                 </a>
             </li>
+            <li class="nav__item">
+                <a href="#hoi2" class="nav__link">
+                    <span class="nav__text">
+                        Blogg
+                    </span>
+                </a>
+                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
+                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
+                <ul class="nav__list-child">
+                    <li class="nav__item">
+                        <a href="#hoi" class="nav__link">
+                            <span class="nav__text">
+                                Knivar & Kastruller
+                            </span>
+                        </a>
+                    </li>
             <li class="nav__item">
                 <a href="#hoi" class="nav__link">
                     <span class="nav__text">
@@ -86,22 +102,7 @@
                     </li>
                 </ul>
             </li>
-            <li class="nav__item">
-                <a href="#hoi2" class="nav__link">
-                    <span class="nav__text">
-                        Blogg
-                    </span>
-                </a>
-                <input class="nav__submenu-trigger-input" type="checkbox" id="submenu-trigger" />
-                <label class="nav__submenu-trigger-finger" for="submenu-trigger"></label>
-                <ul class="nav__list-child">
-                    <li class="nav__item">
-                        <a href="#hoi" class="nav__link">
-                            <span class="nav__text">
-                                Knivar & Kastruller
-                            </span>
-                        </a>
-                    </li>
+           
                     <li class="nav__item">
                         <a href="#hoi" class="nav__link">
                             <span class="nav__text">
