--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <link rel="stylesheet" href="style.css">
-
+    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
 
 <body>
