--- a/generator.html
+++ b/generator.html
@@ -11,9 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
 
-<body>
+<body> 
 
     <div id="overlay" hidden></div>
 
