ta bort stora loggan på receptsöksidan

--- a/index.html
+++ b/index.html
@@ -121,10 +121,10 @@
     <div class="background-container"></div>
 
     <!-- Logotyp Container -->
-    <div class="logo-container" style="text-align: center; margin-top: 20px;">
+   <!-- <div class="logo-container" style="text-align: center; margin-top: 20px;">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
-    </div>
+    </div> -->
 
     <div class="search-container">
         <!-- Ny slider här 
