ändra bakgrundsfärg på om-oss sidan

--- a/omoss.html
+++ b/omoss.html
@@ -14,7 +14,7 @@
             margin: 0;
             font-family: 'Exo 2', cursive;
             color: white; /* Vit text */
-            background-color: black; /* Svart bakgrund */
+            background-color: rgb(250, 240, 202); /* Svart bakgrund */
         }
 
         .background-container {
