--- a/omoss.html
+++ b/omoss.html
@@ -105,12 +105,13 @@
         <p style="margin-top: 0; margin-bottom: 1em;">Vår hemsida är tillägnad åt att framhäva och fira de otroligt talangfulla matentusiaster och kreatörer som delar med sig av sina recept på Instagram. Vi tror på att dela med oss av kulinarisk inspiration och gör det enkelt för dig att utforska och upptäcka nya recept.</p>
         <p style="margin-top: 0; margin-bottom: 1em;">Genom vår sökfunktion kan du hitta rätter baserade på dina favoritingredienser eller specifika måltidstyper. Varje recept på vår sida är en direkt inbäddning från skaparens Instagram-konto, och för att hitta fullständiga recept och detaljerade instruktioner är det bara att klicka vidare in till deras instagram. <strong>Vi uppmuntrar dig att följa dessa kreatörer på Instagram för att få ännu mer inspiration!</strong> </p>
         <p style="margin-top: 0; margin-bottom: 1em;">Vi är djupt engagerade i att respektera upphovsrätten och uppskattar varje kreatörs bidrag till matvärlden. Om du är en skapare vars arbete visas på vår webbplats och har frågor eller önskemål, tveka inte att kontakta oss.</p>
-        <p style="margin-top: 0;">Vår webbplats är byggd på en grund av respekt och beundran för de människor vars kreativitet vi delar. Vi ser fram emot att vara din guide i denna spännande värld av kulinarisk kreativitet och upptäckt. Följ med oss på denna resa och låt oss inspirera dig med varje klick! 🍽️ <strong> Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration.</strong> <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
+        <p style="margin-top: 0;">Vår webbplats är byggd på en grund av respekt och beundran för de människor vars kreativitet vi delar. Vi ser fram emot att vara din guide i denna spännande värld av kulinarisk kreativitet och upptäckt. Följ med oss på denna resa och låt oss inspirera dig med varje klick! 🍽️ <strong> Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(0, 0, 0); text-decoration: underline;">Läs mer...</a></p>
 
     </div>
 
-   
-    <!--  <img src="images/plate1.jpg" alt="Om Oss Bild" class="about-image">
+    
+
+        <!-- <img src="images/plate1.jpg" alt="Om Oss Bild" class="about-image">
     </div> -->
 
     <div class="footer-banner">
