--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -13,9 +13,9 @@
             height: 100%;
             margin: 0;
             font-family: 'Exo 2', cursive;
-            color: white;
+            color: black;
             /* Vit text */
-            background-color: black;
+            background-color: rgb(250, 240, 202);
             /* Svart bakgrund */
         }
 
