--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     <!-- Lägg till denna länk i din head-tagg -->
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
-
+    <meta name="theme-color" content="#faf0ca">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
@@ -19,7 +20,7 @@
     <div class="blocks" id="loader" hidden>
         <div class="block orange"></div>
         <div class="block blue"></div>
-    </div> 
+    </div>
 
     <!-- Överlägg för att mörkna och sudda ut bakgrunden när loadern visas -->
     <div id="overlay" hidden></div>
@@ -121,7 +122,7 @@
     <div class="background-container"></div>
 
     <!-- Logotyp Container -->
-   <!-- <div class="logo-container" style="text-align: center; margin-top: 20px;">
+    <!-- <div class="logo-container" style="text-align: center; margin-top: 20px;">
         <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logotyp" class="logo-image">
 
     </div> -->
@@ -144,7 +145,7 @@
                     <input type="checkbox" id="vegSwitch" onchange="toggleVegFilter()">
                     <span class="slider round"></span>
                 </label>
-            </div> 
+            </div>
             <!--
             <div class="lang-container">
                 <div class="lang-label">På svenska</div>
