--- a/omoss.html
+++ b/omoss.html
@@ -4,7 +4,8 @@
 <head>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="theme-color" content="#faf0ca">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <title>Om Oss - Tallriken</title>
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
 
