--- a/tipsaoss.html
+++ b/tipsaoss.html
@@ -119,7 +119,7 @@
 
 <body>
     <a href="index.html" class="logo-link">
-        <img src="images/visplogo/Logo Files/For Web/svg/White logo - no background.svg" alt="Logga">
+        <img src="images/visplogo/Logo Files/For Web/svg/Black logo - no background.svg" alt="Logga">
     </a>
 
     <div class="background-container"></div>
