--- a/generator.html
+++ b/generator.html
@@ -145,42 +145,42 @@
         </div>
         <!-- Sökfilter Knappar -->
         <!-- Filter Knappar -->
-        <div class="filter-container" id="mealType">
-            <div class="image-button" data-category="mealType" data-filter="lunchmiddag">
+        <div class="filter-container" id="mealtype">
+            <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
                 <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="Lunchmiddag" />
             </div>
-            <div class="image-button" data-category="mealType" data-filter="pasta">
+            <div class="image-button" data-category="mealtype" data-filter="pasta">
                 <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
             </div>
-            <div class="image-button" data-category="mealType" data-filter="forattertilltugg">
+            <div class="image-button" data-category="mealtype" data-filter="forattertilltugg">
                 <img src="images/knappargenerator/knappar/forattertilltugg.png" alt="Förrätter och tilltugg" />
             </div>
-            <div class="image-button" data-category="mealType" data-filter="streetfood">
+            <div class="image-button" data-category="mealtype" data-filter="streetfood">
                 <img src="images/knappargenerator/knappar/streetfood.png" alt="Streetfood" />
             </div>
             <!-- Dolda knappar som visas när "Visa fler" klickas -->
-            <div class="image-button hidden" data-category="mealType" data-filter="frukostbrunch">
+            <div class="image-button hidden" data-category="mealtype" data-filter="frukostbrunch">
                 <img src="images/knappargenerator/knappar/frukostbrunch.png" alt="Frukost Brunch" />
             </div>
-            <div class="image-button hidden" data-category="mealType" data-filter="barnvanligt">
+            <div class="image-button hidden" data-category="mealtype" data-filter="barnvanligt">
                 <img src="images/knappargenerator/knappar/barnvanligt.png" alt="Barnvänligt" />
             </div>
-            <div class="image-button hidden" data-category="mealType" data-filter="soppa">
+            <div class="image-button hidden" data-category="mealtype" data-filter="soppa">
                 <img src="images/knappargenerator/knappar/soppa.png" alt="Soppa" />
             </div>
-            <div class="image-button hidden" data-category="mealType" data-filter="sallad">
+            <div class="image-button hidden" data-category="mealtype" data-filter="sallad">
                 <img src="images/knappargenerator/knappar/sallad.png" alt="Sallad" />
             </div>
-            <div class="image-button hidden" data-category="mealType" data-filter="sasdipproror">
+            <div class="image-button hidden" data-category="mealtype" data-filter="sasdipproror">
                 <img src="images/knappargenerator/knappar/sasdipproror.png" alt="Sås, dipp och röror" />
             </div>
-            <div class="image-button hidden" data-category="mealType" data-filter="efterattfika">
+            <div class="image-button hidden" data-category="mealtype" data-filter="efterattfika">
                 <img src="images/knappargenerator/knappar/efterattfika.png" alt="Efterrätt och fika" />
             </div>
             <!-- Lägg till fler dolda knappar efter behov -->
 
             <!-- Lägg till en "Visa fler"-knapp här -->
-            <div class="show-more-btn" data-target="mealType" data-expanded="false">Visa fler</div>
+            <div class="show-more-btn" data-target="mealtype" data-expanded="false">Visa fler</div>
 
         </div>
 
