--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         const apiKey = 'AIzaSyBFecFz9KFsPnw6bjAKv0N0CSbs3Iszlag';
         const spreadsheetId = '1RN9SQRzletJnH8BAgJEQCI0BtbpsHQU6Pv2L4FDGXEM';
-        const dataRange = 'Blad1!A2:J';
+        const dataRange = 'Blad1!A2:K';
         const synonymRange = 'Ingredienser!A2:B';
         const dataUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${dataRange}?key=${apiKey}`;
         const synonymUrl = `https://sheets.googleapis.com/v4/spreadsheets/${spreadsheetId}/values/${synonymRange}?key=${apiKey}`;
