--- a/generator.html
+++ b/generator.html
@@ -147,7 +147,7 @@
         <!-- Filter Knappar -->
         <div class="filter-container" id="mealtype">
             <div class="image-button" data-category="mealtype" data-filter="lunchmiddag">
-                <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="Lunchmiddag" />
+                <img src="images/knappargenerator/knappar/lunchmiddag.png" alt="lunchmiddag" />
             </div>
             <div class="image-button" data-category="mealtype" data-filter="pasta">
                 <img src="images/knappargenerator/knappar/pasta.png" alt="Pasta" />
