--- a/generator.html
+++ b/generator.html
@@ -269,7 +269,7 @@
                 <img src="images/knappargenerator/knappar/frankrike.png" alt="Frankrike" />
             </div>
             <div class="image-button hidden" data-category="country" data-filter="spanien">
-                <img src="images/knappargenerator/knappar/spanien" alt="Spanien" />
+                <img src="images/knappargenerator/knappar/spanien.png" alt="Spanien" />
             </div>
             <div class="image-button hidden" data-category="country" data-filter="grekland">
                 <img src="images/knappargenerator/knappar/grekland.png" alt="Grekland" />
