--- a/generator.html
+++ b/generator.html
@@ -25,6 +25,13 @@
         </label>
         <ul class="nav__list">
             <li class="nav__item">
+                <a href="startsida2.html" class="nav__link">
+                    <span class="nav__text">
+                        Startsida
+                    </span>
+                </a>
+            </li>
+            <li class="nav__item">
                 <a href="generator.html" class="nav__link">
                     <span class="nav__text">
                         Generatorn
