--- a/startsida2.html
+++ b/startsida2.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
 
@@ -128,13 +129,15 @@
             <p style="margin-top: 0; margin-bottom: 1em;">Utforska via <strong>Generatorn</strong> för inspiration eller använd <strong>Receptsök/Ingredienssök</strong> för att hitta måltider baserade på dina ingredienser.</p>
             <p style="margin-top: 0; margin-bottom: 1em;">Ange dina ingredienser och låt oss visa vägen till nya smarriga måltider som väntar på att bli tillagade.</p>
             <p style="margin-top: 0;">Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
-
-
-        
         </div>
 
+        <!-- Plats för matdagarnas innehåll -->
+        <div id="foodDayContainer"></div>
 
-      
+        <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
+
+
+
 
 </body>
 
