--- a/startsida2.html
+++ b/startsida2.html
@@ -134,7 +134,14 @@
         </div>
 
         <!-- Plats för matdagarnas innehåll -->
-        <div id="foodDayContainer"></div>
+        <div id="foodDayContainer">
+            <div class="headline-background">
+                <h2></h2> <!-- Rubriken kommer att fyllas dynamiskt av JavaScript -->
+            </div>
+            <img src="" alt=""> <!-- Bilden fylls också dynamiskt -->
+            <p></p> <!-- Beskrivningen fylls också dynamiskt -->
+        </div>
+        
 
         <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
