--- a/startsida2.html
+++ b/startsida2.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="foodDays.css"> <!-- Länk till matdags-CSS -->
+    <link rel="stylesheet" href="startsida-image-links.css">
+
     <link rel="icon" type="image/png" href="images/sidfliklogo.png">
 </head>
 
@@ -133,6 +135,16 @@
             <p style="margin-top: 0;">Observera: Allt innehåll tillhör originalskaparna. Genom att klicka på varje inlägg dirigeras du direkt till skaparens Instagram-profil, där du kan utforska fullständiga recept och mer inspiration. <a href="#" style="color: rgb(203, 223, 189); text-decoration: underline;">Läs mer...</a></p>
         </div>
 
+        <div class="image-links">
+            <a href="page1.html">
+                <img src="images/startsidaknappar/ingrediensassistentknapp.svg" alt="Beskrivning av bild 1">
+            </a>
+            <a href="page2.html">
+                <img src="images/startsidaknappar/matkategoriknapp.svg" alt="Beskrivning av bild 2">
+            </a>
+        </div>
+
+
         <!-- Plats för matdagarnas innehåll -->
         <div id="foodDayContainer">
             <div class="headline-background">
@@ -141,7 +153,7 @@
             <img src="" alt=""> <!-- Bilden fylls också dynamiskt -->
             <p></p> <!-- Beskrivningen fylls också dynamiskt -->
         </div>
-        
+
 
         <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
