lägger till divider på startsidan

--- a/startsida2.html
+++ b/startsida2.html
@@ -144,6 +144,7 @@
             </a>
         </div>
 
+        <img src="images/divider/zigzag.svg" alt="Dekorativ divider" class="image-divider">
 
         <!-- Plats för matdagarnas innehåll -->
         <div id="foodDayContainer">
