länkar bilder till rätt sidor från startsida

--- a/startsida2.html
+++ b/startsida2.html
@@ -136,10 +136,10 @@
         </div>
 
         <div class="image-links">
-            <a href="page1.html">
+            <a href="generator.html">
                 <img src="images/startsidaknappar/matkategoriknapp.svg" alt="Beskrivning av bild 1">
             </a>
-            <a href="page2.html">
+            <a href="index.html">
                 <img src="images/startsidaknappar/ingrediensassistentknapp.svg" alt="Beskrivning av bild 2">
             </a>
         </div>
