--- a/startsida2.html
+++ b/startsida2.html
@@ -158,6 +158,8 @@
 
         <script src="foodDays.js"></script> <!-- Länk till matdags-JavaScript -->
 
+        <img src="images/divider/scribble.svg" alt="Dekorativ divider" class="image-divider">
+
 
 
 
